--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/vue@2/dist/vue.min.js" crossorigin="anonymous"></script>
   <script src="https://fengyuanchen.github.io/shared/google-analytics.js" crossorigin="anonymous"></script>
-  <script src="js/compressor.js"></script>
-  <script src="js/main.js"></script>
+  <script src="https://fengyuanchen.github.io/compressorjs/js/compressor.js"></script>
+  <script src="https://fengyuanchen.github.io/compressorjs/js/main.js"></script>
 </body>
 </html>
